labs/02-ingress/hello-app-with-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-v1
  namespace: hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        version: v1
    spec:
      serviceAccountName: hello-sa
      containers:
      - name: helloworld
        image: istio/examples-helloworld-v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-v2
  namespace: hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        version: v2
    spec:
      serviceAccountName: hello-sa
      containers:
      - name: helloworld
        image: istio/examples-helloworld-v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc-np
  labels:
    app: hello
  namespace: hello
spec:
  type: NodePort
  ports:
  - name: http
    port: 5030
    targetPort: 5000
  selector:
    app: hello
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ing
  annotations:
    kubernetes.io/ingress.class: istio
    #kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/ingress.class: "haproxy"
  namespace: hello
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-svc-np
          servicePort: 5030
---
